--- a/app/(website)/buyticket/buyticket.css
+++ b/app/(website)/buyticket/buyticket.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    background-color: #000;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 1) 10%);
     color: #FFD700;
     font-family: Arial, sans-serif;
     height: 100vh;
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
   }
+  
   
   .container {
     width: 100%;
