--- a/app/select/select.css
+++ b/app/select/select.css
@@ -22,6 +22,7 @@
     padding: 20px;
     background-color: #111;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding-top: 100px; /* เผื่อความสูงของ StepProgressBar */
   }
   
   .header {
