--- a/app/login.css
+++ b/app/login.css
@@ -7,7 +7,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #000000, #444444);
+  background: linear-gradient(135deg, #000000, #2e2e2e);
   box-sizing: border-box;
 }
 
