--- a/app/buyticket/buyticket.css
+++ b/app/buyticket/buyticket.css
@@ -43,7 +43,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #FFD700;
+}
+.posterImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .detailsSection {
