--- a/app/moviepage/moviepage.css
+++ b/app/moviepage/moviepage.css
@@ -1,38 +1,42 @@
 .page {
-    background: linear-gradient(to bottom, #7b0000, #1a1a1a);
-    color: white;
-    padding: 20px;
-    font-family: 'Arial', sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .categoryTitle {
-    font-size: 1.8rem;
-    color: white;
-    margin: 0;
-    padding-right: 10px;
-  }
-  
-  .borderLine {
-    flex: 1;
-    border-bottom: 2px solid #D6BB56;
-  }
-  
-  .movieList {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 20px;
-    justify-content: flex-start;
-    overflow-x: auto;
-    padding-bottom: 20px;
-  }
+  background: linear-gradient(to bottom, #7b0000, #1a1a1a);
+  color: white;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Category Header */
+.header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.categoryTitle {
+  font-size: 1.8rem;
+  color: white;
+  margin: 0;
+  padding-right: 10px;
+  padding-left: 20px; /* เพิ่มระยะทางด้านซ้าย */
+}
+
+
+.borderLine {
+  flex: 1;
+  border-bottom: 2px solid #D6BB56;
+}
+
+/* Movie List */
+.movieList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
+  justify-content: flex-start;
+  overflow-x: auto;
+  padding-bottom: 20px;
+}
   
